Circles no longer overlap with numbers, in cells that contain both.

--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,10 @@ input[type='file'] {
   border-radius:999px;
   border:1px solid var(--grid-line-color);
 }
+.cell.has-number .circle
+{
+  border-top-left-radius:0px;
+}
 .cell.word-selected
 {
   background-color: var(--cell-word-selected-bg-color);
